--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
+    "react-id-swiper": "^4.0.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.0.2",
     "react-simple-star-rating": "^5.1.7",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.14.5",
-    "swiper": "^11.1.15"
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.6.13",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
