--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^8.0.0",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
