--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^8.0.0",
-    "@mantine/hooks": "^8.0.0",
+    "@mantine/charts": "^8.0.1",
+    "@mantine/core": "^8.0.1",
+    "@mantine/hooks": "^8.0.1",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -27,6 +28,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.0.2",
     "react-simple-star-rating": "^5.1.7",
+    "recharts": "^2.15.3",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.2.6"
