--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/charts": "^8.0.1",
     "@mantine/core": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
